--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <main class="main">
     <section class="intro">
       <div class="intro__media">
-        <img data-object-fit src="img/birch1.jpg" id="intro__image--1" class="intro__image"/>
+        <img data-object-fit src="img/nintchdbpict000252786397.jpg" id="intro__image--1" class="intro__image"/>
         <img data-object-fit src="img/birch2.jpg" id="intro__image--2" class="intro__image"/>
         <img data-object-fit src="img/birch3.jpg" id="intro__image--3" class="intro__image"/>
         <img data-object-fit src="img/birch4.jpg" id="intro__image--4" class="intro__image"/>
@@ -48,7 +48,7 @@
       <div class="intro__container">
         <div class="intro__item intro__item--1">
           <div class="intro__trigger"></div>
-          <h1 class="intro__title"><span>teem
+          <h1 class="intro__title"><span>diabetes
             </span> <span>Birch</span></h1>
           <span class="intro__scroll">Please Scroll &darr;</span>
         </div>
