--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <div class="intro__container">
         <div class="intro__item intro__item--1">
           <div class="intro__trigger"></div>
-          <h1 class="intro__title"><span>diabetes
+          <h1 class="intro__title"><span>diabete
             </span> <span>Birch</span></h1>
           <span class="intro__scroll">Please Scroll &darr;</span>
         </div>
